[gd_scene format=3 uid="uid://dbc4bpo6fs5x4"]

[ext_resource type="Script" uid="uid://ceatjk3hf87r6" path="res://Test/template_showcase.gd" id="1"]
[ext_resource type="PackedScene" path="res://Templates/UI/time_ability_hud.tscn" id="2"]
[ext_resource type="PackedScene" path="res://Templates/UI/toast_feed.tscn" id="3"]
[ext_resource type="PackedScene" path="res://Templates/UI/cooldown_chip.tscn" id="4"]
[ext_resource type="PackedScene" path="res://Templates/VFX/time_echo_visual.tscn" id="5"]
[ext_resource type="Script" uid="uid://cexypyvc0gtc0" path="res://Templates/VFX/freeze_frame_effect.gd" id="6"]
[ext_resource type="Script" uid="uid://bgarbqi1nrikh" path="res://Templates/VFX/camera_shake_template.gd" id="7"]
[ext_resource type="Texture2D" uid="uid://b0xng8j0pvsgi" path="res://icon.svg" id="8"]

[node name="TemplateShowcase" type="Node2D" unique_id=1352473426]
script = ExtResource("1")

[node name="Camera2D" type="Camera2D" parent="." unique_id=61673054]
position = Vector2(576, 324)

[node name="Dummy" type="Sprite2D" parent="." unique_id=772254604]
position = Vector2(576, 324)
scale = Vector2(0.6, 0.6)
texture = ExtResource("8")

[node name="TimeEchoVisual" parent="." unique_id=588355190 instance=ExtResource("5")]

[node name="FreezeFrameEffect" type="Node" parent="." unique_id=1667669654]
script = ExtResource("6")

[node name="CameraShakeTemplate" type="Node" parent="." unique_id=1145289888]
script = ExtResource("7")
camera_path = NodePath("../Camera2D")

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1799734950]

[node name="TimeAbilityHUD" parent="CanvasLayer" unique_id=333709221 instance=ExtResource("2")]

[node name="ToastFeed" parent="CanvasLayer" unique_id=1909730923 instance=ExtResource("3")]

[node name="CooldownChip" parent="CanvasLayer" unique_id=429662130 instance=ExtResource("4")]
offset_left = 16.0
offset_top = 372.0
offset_right = 296.0
offset_bottom = 408.0
